--- a/src/app/usuario/usuarios-abm/usuarios-abm.page.html
+++ b/src/app/usuario/usuarios-abm/usuarios-abm.page.html
@@ -7,12 +7,6 @@
           [atributos]="['username', 'email']"
         ></app-search-bar>
 
-
-        <!-- <ion-grid *ngIf="usuariosFiltrados.length > 0; else texto" class="tabla ion-text-center">
-          <ion-row>
-            <ion-col *ngFor="let p of usuarioProps">{{ p }}</ion-col>
-            <ion-col>Acciones</ion-col>
-        </ion-row> -->
         <!-- usuario, email, fotoclub -->
         <ion-grid>
           <ion-row>
@@ -32,19 +26,23 @@
               <ion-row size="12">
                 <ion-col size="12" size-md="6">
                   <ion-row class="ion-align-items-center ion-justify-content-between">
-                    <ion-item lines="none">
-                      <app-usuario-img
-                        class="ion-float-left ion-margin-end"
-                        [src]="u.img_url"
-                      ></app-usuario-img>
-  
-                      <ion-label class="ion-float-left">
-                        <ion-card-subtitle>{{u.username}}</ion-card-subtitle>
-                        <ion-text><b>{{u.name + ' ' + u.last_name}}</b></ion-text>
-                        <ion-card-subtitle><a [href]="'mailto:'+u.email"> {{ u.email }} </a></ion-card-subtitle>
-                        <ion-card-subtitle>DNI {{u.dni}}</ion-card-subtitle>
-                      </ion-label>
-                    </ion-item>
+                    <!-- <ion-item lines="none"> -->
+                      <ion-row class="ion-justify-content-between">
+                        <!-- class="ion-float-left ion-margin-end" -->
+                        <app-usuario-img
+                          [src]="u.img_url"
+                        ></app-usuario-img>
+    
+                        <!-- class="ion-float-left"> -->
+                        <ion-label class="ion-margin-start"
+                        >
+                          <ion-card-subtitle>{{u.username}}</ion-card-subtitle>
+                          <ion-text><b>{{u.name + ' ' + u.last_name}}</b></ion-text>
+                          <ion-card-subtitle><a [href]="'mailto:'+u.email"> {{ u.email }} </a></ion-card-subtitle>
+                          <ion-card-subtitle>DNI {{u.dni}}</ion-card-subtitle>
+                        </ion-label>
+                      </ion-row>
+                    <!-- </ion-item> -->
                     <ion-buttons class="ion-hide-md-up">
                       <ion-button (click)="mostrarAcciones($event, u.id)">
                         <ion-icon
@@ -99,7 +97,9 @@
                   size="2"
                   class="ion-hide-md-down ion-align-self-center "
                 >
-                  <ion-text>{{ u.rol_id }}</ion-text>
+                  <!-- <ion-text>{{ u.rol_id }}</ion-text> -->
+                  <ion-text>{{ getRoleType(u.rol_id) }}</ion-text>
+                  <!-- <ion-text>{{ db.getRoleType(u.rol_id) }}</ion-text> -->
                 </ion-col>
                 <!-- <ion-col
                   size="2"
@@ -111,7 +111,9 @@
                   size="2"
                   class="ion-hide-md-down ion-align-self-center "
                 >
-                  <ion-text>{{ u.fotoclub_id }}</ion-text>
+                  <!-- <ion-text>{{  u.fotoclub_id }}</ion-text> -->
+                  <ion-text>{{  getFotoclubName(u.fotoclub_id) }}</ion-text>
+                  <!-- <ion-text>{{ db.getFotoclubName(u.fotoclub_id) }}</ion-text> -->
                 </ion-col>
                 <ion-col size="2" class="ion-align-self-center ion-hide-md-down"> 
                   <ion-buttons>
