--- a/src/app/nav/navbar/navbar.component.html
+++ b/src/app/nav/navbar/navbar.component.html
@@ -1,5 +1,21 @@
 <!-- <ion-header> -->
 <ion-toolbar color="dark">
+  <ion-buttons slot="start">
+    <ion-thumbnail>
+      <ion-img src="../../../assets/GFC logo.png"></ion-img>
+    </ion-thumbnail>
+    <ion-title class="ion-hide-md-down ion-no-padding">Grupo Fotográfico Centro</ion-title>
+  </ion-buttons>
+  <!-- <ion-title slot="start">Icono Page</ion-title> -->
+  <ion-buttons slot="secondary" class="ion-hide-md-down ion-padding-start"> <!-- up para PC -->
+    <!-- <ion-button [routerLink]="['/']"> Home </ion-button> -->
+    <!-- <ion-button> Reglamento </ion-button> -->
+    <ion-button [routerLink]="['/concursos']"> Concursos </ion-button>
+    <!-- <ion-button> Galería </ion-button> -->
+    <ion-button [routerLink]="['/usuarios']" *ngIf="auth.loggedIn()">
+      Usuarios
+    </ion-button>
+  </ion-buttons>
   <ion-buttons slot="secondary" *ngIf="auth.loggedIn(); else login">
     <!-- <ion-button (click)="mostrarNotificaciones($event)">
       <ion-icon slot="icon-only" name="notifications-outline"></ion-icon>
@@ -15,22 +31,6 @@
 
   <ion-buttons slot="end" class="ion-hide-md-up">
     <ion-menu-button (click)="openMenu()" autoHide="false"></ion-menu-button>
-  </ion-buttons>
-  <ion-buttons slot="start">
-    <ion-thumbnail>
-    <ion-img src="../../../assets/GFC logo.png"></ion-img>
-    </ion-thumbnail>
-    <ion-title class="ion-hide-md-down ion-no-padding">Grupo Fotográfico Centro</ion-title>
-  </ion-buttons>
-  <!-- <ion-title slot="start">Icono Page</ion-title> -->
-  <ion-buttons slot="start" class="ion-hide-md-down ion-padding-start"> <!-- up para PC -->
-    <!-- <ion-button [routerLink]="['/']"> Home </ion-button> -->
-    <!-- <ion-button> Reglamento </ion-button> -->
-    <ion-button [routerLink]="['/concursos']"> Concursos </ion-button>
-    <!-- <ion-button> Galería </ion-button> -->
-    <ion-button [routerLink]="['/usuarios']" *ngIf="auth.loggedIn()">
-      Usuarios
-    </ion-button>
   </ion-buttons>
 </ion-toolbar>
 <!-- </ion-header> -->
