--- a/src/app/usuario/usuario.page.html
+++ b/src/app/usuario/usuario.page.html
@@ -57,7 +57,7 @@
           <ion-header>
             <ion-toolbar>
               <ion-list>
-                <ion-item [routerLink]="['/usuarios', 'editar', usuario.id]">
+                <ion-item lines="none" [routerLink]="['/usuarios', 'editar', usuario.id]">
                 <!-- <ion-item [routerLink]="['/perfil', 'editar']"> -->
                   <ion-icon
                     slot="start"
@@ -67,7 +67,7 @@
                   <ion-label>Editar perfil</ion-label>
                 </ion-item>
 
-                <ion-item [routerLink]="['/perfil']">
+                <ion-item lines="none" [routerLink]="['/perfil']">
                   <ion-icon
                     slot="start"
                     ios="lock-closed-outline"
@@ -76,7 +76,7 @@
                   <ion-label>Terminos y Condiciones</ion-label>
                 </ion-item>
 
-                <ion-item [routerLink]="['/perfil']">
+                <ion-item lines="none" [routerLink]="['/perfil']">
                   <ion-icon
                     slot="start"
                     ios="help-circle-outline"
@@ -85,7 +85,7 @@
                   <ion-label>Ayuda</ion-label>
                 </ion-item>
 
-                <!-- <ion-item [routerLink]="['/perfil']" >
+                <!-- <ion-item lines="none" [routerLink]="['/perfil']" >
                   <ion-icon
                     slot="start"
                     ios="log-out-outline"
@@ -100,7 +100,7 @@
           <ion-footer>
             <ion-toolbar>
               <ion-list>
-                <ion-item (click)="logout()">
+                <ion-item lines="none" (click)="logout()">
                   <ion-icon
                     slot="start"
                     ios="log-out-outline"
