funcionalidad de vista de concurso andando en local

--- a/src/app/concursos/concurso-detail/image-post/image-post.page.html
+++ b/src/app/concursos/concurso-detail/image-post/image-post.page.html
@@ -94,7 +94,7 @@
                     > Cancelar</ion-button>                    
                     <ion-button 
                       expand="block" type="submit" class="ion-margin-start"
-                      [disabled]="!datosCargados(formImage)"
+                      [disabled]="loading || !datosCargados(formImage)"
                     >Guardar</ion-button>
                   </ion-row>
                 </ion-col>
