--- a/src/app/concursos/concurso-detail/concurso-detail.page.html
+++ b/src/app/concursos/concurso-detail/concurso-detail.page.html
@@ -66,25 +66,48 @@
      
         <ion-grid >
           <ion-row class="ion-padding-end"> <!-- class="ion-text-center" -->
-            <ion-col size="6" size-md="3" class="">Foto</ion-col>
-            <ion-col class="ion-hide-md-down ion-padding-start" size="4">Concursante</ion-col>
-            <ion-col  class="ion-text-center"  size="3" size-md="2">Premio</ion-col>
-            <ion-col class="ion-hide-md-down ion-text-center" size="2">Puntaje</ion-col>
-            <ion-col class="ion-hide-md-up ion-text-center" size="2">Ptje</ion-col>
-            <ion-col size="1"></ion-col>
+            <ion-col class=""
+              size="6" size-md="3"
+            >Foto</ion-col>
+
+            <ion-col class="ion-hide-md-down ion-padding-start" 
+              size="4" size-md="3"
+            >Concursante</ion-col>
+
+            <ion-col class="ion-text-center"  
+              size="3" size-md="2"
+            >Premio</ion-col>
+
+            <ion-col class="ion-hide-md-down ion-text-center" 
+              size="2"
+            >Puntaje</ion-col>
+
+            <ion-col class="ion-hide-md-up ion-text-center" 
+              size="2"
+            >Ptje</ion-col>
+
+            <ion-col 
+              size="2"
+            ></ion-col>
           </ion-row>
         </ion-grid>
         <ion-list>
           <ion-item class="ion-no-padding">
             <ion-grid *ngIf="!loading"> <!-- class="ion-text-center" -->
               <ion-row size="12" *ngFor="let r of contestResults">
-                <ion-col size="6" size-md="3" class="ion-align-self-center">
+
+                <ion-col class="ion-align-self-center"
+                  size="6" size-md="3"
+                >
                   <ion-card-subtitle>{{ getImage(r).code }}</ion-card-subtitle>
                   <!-- <ion-card-title >Prueba de Riendas</ion-card-title> -->
                   
                   <ion-text><b>{{ getImage(r).title }}</b></ion-text>
                 </ion-col>
-                <ion-col  class="ion-hide-md-down ion-text-center ion-align-self-center"  size="4">
+
+                <ion-col class="ion-hide-md-down ion-text-center ion-align-self-center"  
+                  size="4" size-md="3"
+                >
                   <!-- <ion-text>Martin Martinez  Martinez</ion-text> -->
                <!--    TODO: componente usuario -->
                   <ion-item lines="none">
@@ -105,19 +128,30 @@
 
                   </ion-item>
                 </ion-col>
-                <ion-col  class="ion-text-center ion-align-self-center"  size="3" size-md="2">
-                  <ion-text>R</ion-text>
-                </ion-col>
-                <ion-col  class="ion-text-center ion-align-self-center"  size="2">
-                  <ion-text>-</ion-text>
+
+                <ion-col  class="ion-text-center ion-align-self-center"  
+                  size="3" size-md="2"
+                >
+                  <ion-text>{{ getMetric(r).prize }}</ion-text>
                 </ion-col>
 
-                <ion-col size="1" class="ion-align-self-center">
-                  <ion-buttons class="ion-hide-lg-down">
-                    <ion-button>
+                <ion-col  class="ion-text-center ion-align-self-center"  
+                  size="2"
+                >
+                  <ion-text>{{ getMetric(r).score }}</ion-text>
+                </ion-col>
+
+                <ion-col class="ion-align-self-center "
+                  size="1" size-md="2"
+                >
+                  <ion-buttons class="ion-hide-lg-down ion-justify-content-end">
+                    <ion-button (click)="reviewImage(getImage(r), r)">
+                      <ion-icon name="star-outline"></ion-icon>
+                    </ion-button>
+                    <ion-button (click)="postImage(getImage(r))">
                       <ion-icon name="create"></ion-icon>
                     </ion-button>
-                    <ion-button>
+                    <ion-button (click)="deleteImage(r.image_id)">
                       <ion-icon name="trash"></ion-icon>
                     </ion-button>
                   </ion-buttons>
