--- a/src/app/concursos/concurso-detail/image-review/image-review.page.html
+++ b/src/app/concursos/concurso-detail/image-review/image-review.page.html
@@ -37,13 +37,14 @@
                 <h6>Datos del perfil</h6>
               </ion-row> -->
 
-                <ion-row class="ion-padding-top">
+                <!-- <ion-row class="ion-padding-top"> -->
                   <!-- <ion-col size-md="6" size="12"> -->
                   <!-- <ion-col size="12" class="ion-align-self-center ion-justify-content-center"> -->
                     
                     <ion-item class="w-100 ion-margin-bottom">
                         <ion-label position="floating">Premio</ion-label>
                         <ion-input
+                          [ngModel]="review.prize"
                           name="prize"
                           required
                           ></ion-input>
@@ -54,6 +55,7 @@
                     <ion-item class="w-100 ion-margin-bottom">
                         <ion-label position="floating">Puntaje</ion-label>
                         <ion-input
+                          [ngModel]="review.score"
                           name="score"
                           required
                           ></ion-input>
@@ -75,7 +77,7 @@
                       </ion-select>
                     </ion-item> -->
                   <!-- </ion-col> -->
-                </ion-row>
+                <!-- </ion-row> -->
 
               <!-- <ion-row>
                 <ion-col size="9" size-md="12">
