Se corrigen errores sobre uso de funciones de servicio de autenticacion en vistas

--- a/src/app/concursos/concurso-detail/concurso-detail.page.html
+++ b/src/app/concursos/concurso-detail/concurso-detail.page.html
@@ -151,7 +151,7 @@
                     <ion-button (click)="postImage(getImage(r))">
                       <ion-icon name="create"></ion-icon>
                     </ion-button>
-                    <ion-button (click)="deleteImage(r.image_id)">
+                    <ion-button (click)="deleteImage(r.image_id,0,0)">
                       <ion-icon name="trash"></ion-icon>
                     </ion-button>
                   </ion-buttons>
