--- a/src/app/nav/sidebar/sidebar.component.html
+++ b/src/app/nav/sidebar/sidebar.component.html
@@ -10,7 +10,7 @@
       <!-- <ion-item>Reglamento</ion-item> -->
       <ion-item [routerLink]="['/concursos']">Concursos</ion-item>
       <!-- <ion-item>Galería</ion-item> -->
-      <ion-item [routerLink]="['/usuarios']" *ngIf="auth.loggedIn()">Usuarios</ion-item>
+      <ion-item [routerLink]="['/usuarios']" *ngIf="isLoggedIn()">Usuarios</ion-item>
     </ion-list>
   </ion-content>
 </ion-menu>
