tamaño de los avatares

--- a/src/app/usuario/usuarios-abm/usuario-post/usuario-post.page.html
+++ b/src/app/usuario/usuarios-abm/usuario-post/usuario-post.page.html
@@ -19,9 +19,9 @@
   <ion-grid>
     <ion-row class="ion-justify-content-center">
       <ion-col size="2" class="ion-hide-md-down ion-padding-top ion-margin-top">
-        <ion-row class="ion-justify-content-center">
+        <!-- <ion-row size="12" class="ion-justify-content-center"> -->
           <app-usuario-img [src]="usuario.img_url"></app-usuario-img>
-        </ion-row>
+        <!-- </ion-row> -->
       </ion-col>
       <ion-col size-sm="12" size-md="9" size-lg="7">
         <ion-row>
