--- a/src/app/shared/usuario-img/usuario-img.component.html
+++ b/src/app/shared/usuario-img/usuario-img.component.html
@@ -1,16 +1,25 @@
+<!-- <ion-thumbnail> -->
 <ion-avatar>
-  <ion-img
-    #img
-    [src]="src"
-    (ionError)="yepImg = false"
-    *ngIf="src != undefined && yepImg==true; else noImg"
-    [style]="getSize()"
-    ></ion-img>
-    <!-- (ionImgWillLoad)="yepImg = true" -->
-    <!-- (ionError)="mostrarIcono($event, true)" -->
-  <ng-template #noImg>
-    <ion-icon
-      name="person-circle-outline"
-    ></ion-icon>
-  </ng-template>
-</ion-avatar>
+
+    <ion-img
+      #img
+      [src]="src"
+      (ionError)="yepImg = false"
+        *ngIf="src != undefined && yepImg==true; else noImg"
+      [style]="getSize()"
+      ></ion-img>
+      
+      <!-- (ionError)="src = '../../../assets/person-circle-outline.svg'" -->
+
+     
+        
+        
+        <!-- (ionImgWillLoad)="yepImg = true" -->
+        <!-- (ionError)="mostrarIcono($event, true)" -->
+        
+        
+        <ng-template #noImg>
+          <ion-icon size="large" name="person-circle-outline"></ion-icon>
+        </ng-template>
+      </ion-avatar>
+    <!-- </ion-thumbnail> -->
