--- a/src/app/shared/usuario-img/usuario-img.component.scss
+++ b/src/app/shared/usuario-img/usuario-img.component.scss
@@ -1,9 +1,16 @@
-ion-icon { font-size: 64px; }
+// ion-icon { font-size: 64px; }
 // ion-icon {
 //     width:100% !important;  
 //     height : 100% !important; 
-//     // width: auto !important;
-//     // height: auto !important; 
-//     max-width: 100% !important;  //any size
-//     max-height: 100% !important; //any size 
+//     width: auto !important;
+//     height: auto !important; 
+//     // max-width: 100% !important;  //any size
+//     // max-height: 100% !important; //any size 
 // }
+
+ion-avatar, ion-img,ion-icon{
+    width:100% !important;  
+    height : 100% !important;  
+    max-width: 100% !important;  //any size
+    max-height: 100% !important; //any size 
+}
