--- a/src/app/shared/usuario-img/usuario-img.component.scss
+++ b/src/app/shared/usuario-img/usuario-img.component.scss
@@ -9,8 +9,24 @@
 // }
 
 ion-avatar, ion-img,ion-icon{
-    width:100% !important;  
-    height : 100% !important;  
+    width: 100% !important;  
+    height : auto !important;  
     max-width: 100% !important;  //any size
-    max-height: 100% !important; //any size 
+    max-height: auto !important; //any size 
+    aspect-ratio: 1/1 !important;
+   
 }
+
+@supports not (aspect-ratio: 1 / 1) {
+    .element::before {
+      float: left;
+      padding-top: 100%;
+      content: "";
+    }
+  
+    .element::after {
+      display: block;
+      content: "";
+      clear: both;
+    }
+  }
