--- a/src/app/usuario/usuarios-abm/usuario-post/usuario-post.page.html
+++ b/src/app/usuario/usuarios-abm/usuario-post/usuario-post.page.html
@@ -18,10 +18,8 @@
 <ion-content>
   <ion-grid>
     <ion-row class="ion-justify-content-center">
-      <ion-col size="2" class="ion-hide-md-down ion-padding-top ion-margin-top">
-        <!-- <ion-row size="12" class="ion-justify-content-center"> -->
-          <app-usuario-img [src]="usuario.img_url"></app-usuario-img>
-        <!-- </ion-row> -->
+      <ion-col size="2" class="ion-hide-md-down">
+     <app-usuario-img [src]="usuario.img_url"></app-usuario-img>       
       </ion-col>
       <ion-col size-sm="12" size-md="9" size-lg="7">
         <ion-row>
@@ -130,9 +128,8 @@
               </ion-item>
               <!-- </ion-col> -->
             </ion-row>
-            <ion-item >
+            <ion-item>
               <ion-row>
-
                 <ion-col size="10" size-md="12" class="ion-no-padding">
                   <!-- <ion-item> -->
                   <ion-label position="floating">Imagen (url)</ion-label>
@@ -142,7 +139,6 @@
                     required
                   ></ion-input>
                   <!-- </ion-item> -->
-
                 </ion-col>
                 <ion-col
                   size="2"
@@ -159,19 +155,31 @@
             <ion-row class="ion-justify-content-end">
               <ion-col size="12">
                 <ion-row class="ion-justify-content-end">
-                  <ion-col push-sm="3" size="12" size-sm="3" class="ion-align-self-center"><ion-button 
-                    expand="block"
-                    type="submit"
-                    [disabled]="!datosCargados()"
-                    >Guardar</ion-button
+                  <ion-col
+                    push-sm="3"
+                    size="12"
+                    size-sm="3"
+                    class="ion-align-self-center"
+                    ><ion-button
+                      expand="block"
+                      type="submit"
+                      [disabled]="!datosCargados()"
+                      >Guardar</ion-button
+                    ></ion-col
+                  >
+
+                  <ion-col
+                    class="ion-align-self-center"
+                    pull-sm="3"
+                    size="12"
+                    size-sm="3"
+                  >
+                    <ion-back-button
+                      text="Cancelar"
+                      icon=""
+                      defaultHref="/usuarios"
+                    ></ion-back-button
                   ></ion-col>
-                 
-                  <ion-col class="ion-align-self-center" pull-sm="3" size="12" size-sm="3"> <ion-back-button
-                    text="Cancelar"
-                    icon=""
-                    defaultHref="/usuarios"
-                  ></ion-back-button></ion-col>
-                  
                 </ion-row>
               </ion-col>
             </ion-row>
