--- a/src/app/concursos/concurso-post/concurso-post.page.html
+++ b/src/app/concursos/concurso-post/concurso-post.page.html
@@ -20,51 +20,48 @@
     <ion-row class="ion-justify-content-center">
       <ion-col size="12" size-md="10">
         <form #f="ngForm" (ngSubmit)="postConcurso(f)">
-          <ion-row class="ion-align-items-end">
-            <ion-col size="12" size-md="4" >
-              <ion-item>
-                <!-- <ion-col> -->
-                  <ion-label position="floating">Nombre</ion-label>
+          <ion-list class="ion-align-items-end">
+            <!-- <ion-col size="12" size-md="4" > -->
+            <ion-item>
+              <!-- <ion-col> -->
+              <ion-label position="floating">Nombre</ion-label>
+              <ion-input
+                name="name"
+                [ngModel]="concurso.name"
+                required
+              ></ion-input>
+              <!-- </ion-col> -->
+            </ion-item>
+            <!-- </ion-col> -->
+            <!-- <ion-col size="12" size-md="8"> -->
+            <ion-item>
+              <ion-col size="6" class="ion-no-padding">
+                <ion-item class="ion-no-padding">
+                  <ion-label position="stacked">Inicio</ion-label>
                   <ion-input
-                    name="name"
-                    [ngModel]="concurso.name"
+                    type="date"
+                    name="start_date"
+                    [ngModel]="concurso.start_date"
                     required
                   ></ion-input>
-                <!-- </ion-col> -->
-              </ion-item>
-            </ion-col>
-            <ion-col size="12" size-md="8">
-              <ion-row >
-                <ion-col size="6" class="ion-no-padding ion-padding-end">
-                  <ion-item>
-                    <ion-label position="stacked">Inicio</ion-label>
-                    <ion-input
-                      type="date"
-                      name="start_date"
-                      [ngModel]="concurso.start_date"
-                      required
-                    ></ion-input>
-                  </ion-item>
-                </ion-col>
-                <ion-col size="6" class="ion-no-padding">
-                  <ion-item>
-                    <ion-label position="stacked">Finalización</ion-label>
-                    <ion-input
-                      type="date"
-                      name="end_date"
-                      [ngModel]="concurso.end_date"
-                      required
-                    ></ion-input>
-                  </ion-item>
-    
-                </ion-col>
-              </ion-row>
-            </ion-col>
+                </ion-item>
+              </ion-col>
+              <ion-col size="6" class="ion-no-padding">
+                <ion-item class="ion-no-padding">
+                  <ion-label position="stacked">Finalización</ion-label>
+                  <ion-input
+                    type="date"
+                    name="end_date"
+                    [ngModel]="concurso.end_date"
+                    required
+                  ></ion-input>
+                </ion-item>
+              </ion-col>
+            </ion-item>
+            <!-- </ion-col> -->
 
-          </ion-row>
-
-          <ion-item>
-            <!-- <ion-col> -->
+            <ion-item>
+              <!-- <ion-col> -->
               <ion-label position="floating">Descripción</ion-label>
               <ion-textarea
                 auto-grow="true"
@@ -72,15 +69,38 @@
                 [ngModel]="concurso.description"
                 required
               ></ion-textarea>
-            <!-- </ion-col> -->
-          </ion-item>
+              <!-- </ion-col> -->
+            </ion-item>
+          </ion-list>
 
           <ion-row class="ion-justify-content-end">
-            <ion-col size="12" >
+            <ion-col size="12">
               <ion-row class="ion-justify-content-end">
-                <ion-back-button text="Cancelar" icon="" [defaultHref]="backUrl"></ion-back-button>
-                <ion-button expand="block" type="submit" [disabled]="!f.valid"
-                >Guardar</ion-button>
+                <ion-col
+                  push-sm="3"
+                  size="12"
+                  size-sm="3"
+                  class="ion-align-self-center"
+                  ><ion-button
+                    expand="block"
+                    type="submit"
+                    [disabled]="!f.valid"
+                    >Guardar</ion-button
+                  ></ion-col
+                >
+
+                <ion-col
+                  class="ion-align-self-center"
+                  pull-sm="3"
+                  size="12"
+                  size-sm="3"
+                >
+                  <ion-back-button
+                    text="Cancelar"
+                    icon=""
+                    [defaultHref]="backUrl"
+                  ></ion-back-button
+                ></ion-col>
               </ion-row>
             </ion-col>
           </ion-row>
