--- a/src/app/usuario/usuarios-abm/usuario-post/usuario-post.page.html
+++ b/src/app/usuario/usuarios-abm/usuario-post/usuario-post.page.html
@@ -127,30 +127,31 @@
                 </ion-select>
               </ion-item>
               <!-- </ion-col> -->
-            </ion-row>
-            <ion-item>
-              <ion-row>
-                <ion-col size="10" size-md="12" class="ion-no-padding">
-                  <!-- <ion-item> -->
-                  <ion-label position="floating">Imagen (url)</ion-label>
-                  <ion-input
+              <ion-item class="expand-full">
+                <!-- <ion-row> -->
+                  <ion-col size="10" size-md="12" >
+                    <ion-item class="ion-no-padding">
+                      <ion-label position="floating">Imagen (url)</ion-label>
+                      <ion-input
                     name="img_url"
                     [(ngModel)]="usuario.img_url"
                     required
-                  ></ion-input>
-                  <!-- </ion-item> -->
-                </ion-col>
-                <ion-col
+                    ></ion-input>
+                    </ion-item>
+                  </ion-col>
+                  <ion-col
                   size="2"
-                  size-md="1"
-                  class="
-                    ion-align-self-center ion-justify-content-end ion-hide-sm-up
+                  class="ion-align-self-center ion-hide-sm-up ion-no-padding
                   "
-                >
-                  <app-usuario-img [src]="usuario.img_url"></app-usuario-img>
+                  >
+                  <ion-item>
+                    <app-usuario-img [src]="usuario.img_url"></app-usuario-img>
+                  </ion-item>
+                 
                 </ion-col>
-              </ion-row>
-            </ion-item>
+                <!-- </ion-row> -->
+              </ion-item>
+            </ion-row>
 
             <ion-row class="ion-justify-content-end">
               <ion-col size="12">
